Fix spacing in testimonail section

--- a/pbl-5/css/styles.css
+++ b/pbl-5/css/styles.css
@@ -216,7 +216,7 @@ button {
   z-index: -10;
 }
 
-@media (min-width: 70em) {
+@media (min-width: 62em) {
   .testimonials .cards .card:last-child {
     margin-top: -7em;
   }
